[package]
authors      = ["shapeshed <go@margined.io>"]
categories   = ["wasm"]
description  = "An opinionated base vault implementing CosmWasm Vault Standard using Tokenfactory"
edition      = "2021"
homepage     = "https://github.com/margined-protocol/vaultenator"
keywords     = ["cosmos", "osmosis", "vault"]
license      = "MIT OR Apache-2.0"
name         = "vaultenator"
publish      = true
readme       = "README.md"
repository   = "https://github.com/margined-protocol/vaultenator"
resolver     = "2"
rust-version = "1.76.0"
version      = "0.0.9"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library    = []

[dependencies]
cosmwasm-schema   = "1.5.3"
cosmwasm-std      = "1.5.3"
cw-controllers    = "1.1.2"
cw-storage-plus   = "1.2.0"
cw-utils          = "1.0.3"
cw-vault-standard = "0.4.0"
cw2               = "1.1.2"
osmosis-std       = "0.22.0"
serde             = "1.0.197"
thiserror         = "1.0.59"

[dev-dependencies]
osmosis-test-tube = "22.1.0"
